# comfyui-save-image-xmp

./: .gitignore  README.md  __init__.py  pyproject.toml
.cursor/rules/: personal-chat.mdc  project-management.mdc  security.mdc  software-engineering.mdc
.cursor/skills/android-development/: SKILL.md
.cursor/skills/apple-notes-export/: SKILL.md
.cursor/skills/design/: SKILL.md
.cursor/skills/design/design-philosophy/: SKILL.md  reference.md
.cursor/skills/design/design-system/: SKILL.md
.cursor/skills/design/design-thinking/: SKILL.md
.cursor/skills/docs/: SKILL.md
.cursor/skills/git/: SKILL.md
.cursor/skills/linear/: SKILL.md
.cursor/skills/machines/: SKILL.md
.cursor/skills/machines/corp-machines/: SKILL.md
.cursor/skills/machines/corp-machines/references/: corp_ec2.md  corp_jet.md  corp_worky.md  corp_workyheavy.md
.cursor/skills/machines/personal-machines/: SKILL.md
.cursor/skills/machines/personal-machines/references/: per_desky.md  per_lappy.md  per_router.md
.cursor/skills/machines/references/: mcp-servers.md
.cursor/skills/media-download/: SKILL.md
.cursor/skills/python/: SKILL.md
.cursor/skills/universal-rule-skill-export/: SKILL.md  configuration_formats.md  export_config.py  sync_to_repo.py
.github/workflows/: publish.yml
nodes/: __init__.py  layer_pack.py  model_hash_collector.py  save_image_xmp.py  save_layered_tiff_xmp.py
web/: layer_pack.js
